--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,153 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+} */
+
+:root {
+  /* colors */
+  --clr-dark: 230 35% 7%;
+  --clr-light: 231 77% 90%;
+  --clr-white: 0 0% 100%;
+
+  /* font-sizes */
+  --fs-900: 9.375rem;
+  --fs-800: 6.25rem;
+  --fs-700: 3.5rem;
+  --fs-600: 2rem;
+  --fs-500: 1.75rem;
+  --fs-400: 1.125rem;
+  --fs-300: 1rem;
+  --fs-200: 0.875rem;
+
+  /* font-families */
+  --ff-serif: "Bellefair", serif;
+  --ff-sans-cond: "Barlow Condense", sans-serif;
+  --ff-sans-normal: "Barlow", sans-serif;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+  background-color: black;
+  min-height: 100vh;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  .bg-dark {
+    background-color: hsl(var(--clr-dark));
+  }
+
+  .bg-accent {
+    background-color: hsl(var(--clr-light));
+  }
+  .bg-white {
+    background-color: hsl(var(--clr-white));
+  }
+  .text-dark {
+    color: hsl(var(--clr-dark));
+  }
+  .text-accent {
+    color: hsl(var(--clr-light));
+  }
+  .text-white {
+    color: hsl(var(--clr-white));
+  }
+
+  /* typography */
+  .ff-serif {
+    font-family: var(--ff-serif);
+  }
+  .ff-sans-cond {
+    font-family: var(--ff-sans-cond);
+  }
+  .ff-sans-normal {
+    font-family: var(--ff-sans-normal);
+  }
+
+  .letter-spacing-1 {
+    letter-spacing: 4.75px;
+  }
+
+  .letter-spacing-2 {
+    letter-spacing: 2.7px;
+  }
+
+  .letter-spacing-3 {
+    letter-spacing: 2.35px;
+  }
+
+  .fs-900 {
+    font-size: var(--fs-900);
+  }
+
+  .fs-800 {
+    font-size: var(--fs-800);
+  }
+
+  .fs-700 {
+    font-size: var(--fs-700);
+  }
+
+  .fs-600 {
+    font-size: var(--fs-600);
+  }
+
+  .fs-500 {
+    font-size: var(--fs-500);
+  }
+
+  .fs-400 {
+    font-size: var(--fs-400);
+  }
+
+  .fs-300 {
+    font-size: var(--fs-300);
+  }
+
+  .fs-200 {
+    font-size: var(--fs-200);
+  }
+
+  .fs-100 {
+    font-size: var(--fs-100);
+  }
+}
+
+@layer components {
+  .sr-only {
+    clip: rect(0, 0, 0, 0);
+    @apply absolute w-[1px] h-[1px] p-0 m-[-1px] overflow-hidden whitespace-nowrap border-0;
+  }
+
+  .box {
+    background: lightblue;
+    @apply p-[3rem];
+  }
+
+  .custom-container {
+    padding-inline: 2em;
+    margin-inline: 2rem;
+    max-width: 80rem;
   }
 }
