--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -46,8 +50,34 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
-  background-color: black;
+  background-color: hsl(var(--clr-dark));
+  color: hsl(var(--clr-white));
+  line-height: 1.5;
   min-height: 100vh;
+  font-family: var(--ff-sans-normal);
+  font-size: var(--fs-400);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figure,
+picture {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: 400;
 }
 
 @layer utilities {
@@ -76,7 +106,7 @@ body {
   }
 
   /* typography */
-  .ff-serif {
+  /* .ff-serif {
     font-family: var(--ff-serif);
   }
   .ff-sans-cond {
@@ -84,7 +114,7 @@ body {
   }
   .ff-sans-normal {
     font-family: var(--ff-sans-normal);
-  }
+  } */
 
   .letter-spacing-1 {
     letter-spacing: 4.75px;
@@ -133,6 +163,20 @@ body {
   .fs-100 {
     font-size: var(--fs-100);
   }
+
+  .fs-900,
+  .fs-800,
+  .fs-700,
+  .fs-600 {
+    line-height: 1.1;
+  }
+
+  /* * + * - Applied to elements that have adjacent elements before it */
+  /* *:not(:first-child) works the same as well */
+  .flow > *:where(:not(:first-child)) {
+    margin-top: var(--flow-space, 1rem);
+    /* outline: 1px solid red; */
+  }
 }
 
 @layer components {
@@ -141,14 +185,72 @@ body {
     @apply absolute w-[1px] h-[1px] p-0 m-[-1px] overflow-hidden whitespace-nowrap border-0;
   }
 
-  .box {
-    background: lightblue;
-    @apply p-[3rem];
-  }
-
   .custom-container {
     padding-inline: 2em;
     margin-inline: 2rem;
     max-width: 80rem;
+  }
+
+  .numbered-title {
+    color: hsl(var(--clr-white));
+    text-transform: uppercase;
+    font-family: var(--ff-sans-cond);
+    font-size: var(--fs-500);
+    letter-spacing: 4.72px;
+  }
+
+  .numbered-title span {
+    color: hsl(var(--clr-white) / 0.25);
+    margin-right: 0.5em;
+    font-weight: 700;
+  }
+
+  .large-button {
+    @apply relative z-[1] font-serif uppercase grid place-content-center aspect-square rounded-full bg-white text-dark px-[2em];
+  }
+  /* bg-white/[0.1036] */
+  .large-button::after {
+    content: "";
+    @apply aspect-square absolute -z-[1] bg-white/15 w-full h-full rounded-full opacity-0;
+
+    /* Equivalent with tailwindcss is [transition:opacity_0.5s_linear,transform_0.75s_ease-in-out]; */
+    transition: opacity 0.5s linear, transform 0.75s ease-in-out;
+  }
+
+  .large-button:hover::after,
+  .large-button:focus::after {
+    @apply scale-150 opacity-100;
+  }
+
+  .primary-navigation {
+    --gap: 8rem;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .primary-nagivation a {
+    text-decoration: none;
+  }
+
+  .primary-navigation a span {
+    font-weight: 700;
+    margin-right: 0.5em;
+  }
+
+  .underline-indicators > * {
+    padding: var(--underline-gap, 1rem) 0;
+    border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
+  }
+
+  .underline-indicators > *:hover,
+  .underline-indicators > *:focus {
+    border-color: hsl(var(--clr-white) / 0.5);
+  }
+
+  .underline-indicators > .active,
+  .underline-indicators > [aria-selected="true"] {
+    border-color: hsl(var(--clr-white) / 1);
+    color: hsl(var(--clr-white) / 1);
   }
 }
