--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,7 @@ body {
   grid-template-rows: min-content 1fr;
   font-family: var(--ff-sans-normal);
   font-size: var(--fs-400);
+  overflow: hidden;
 }
 
 h1,
@@ -213,7 +214,6 @@ p {
   }
 
   .grid-container {
-    border: 5px solid limegreen;
     display: grid;
     text-align: center;
     place-items: center;
@@ -230,12 +230,10 @@ p {
         );
     }
     .grid-container > *:first-child {
-      border: 1px solid purple;
       grid-column: 2;
     }
 
     .grid-container > *:last-child {
-      border: 1px solid orange;
       grid-column: 3;
     }
   }
@@ -289,13 +287,68 @@ p {
     text-decoration: none;
   } */
 
+  .primary-navigation {
+    display: flex;
+    background-color: hsl(var(--clr-dark) / 0.95);
+  }
+
+  @supports (backdrop-filter: blur(1.5rem)) {
+    .primary-navigation {
+      background-color: hsl(var(--clr-white) / 0.05);
+      backdrop-filter: blur(1.5rem);
+    }
+  }
+
+  .mobile-nav-toggle {
+    display: none;
+  }
+
+  @media (max-width: 48rem) {
+    .primary-navigation {
+      flex-direction: column;
+      position: fixed;
+      inset: 0 0 0 20%;
+      z-index: 1000;
+      padding: min(20rem, 15vh) 2rem;
+      --underline-gap: 0.5rem;
+      transform: translateX(100%);
+      transition: transform 0.15s ease-in-out;
+    }
+
+    .primary-navigation.open-nav {
+      transform: translateX(0);
+    }
+
+    /* .primary-navigation.underline-indicators > .active {
+      border: 0;
+    } */
+
+    .mobile-nav-toggle {
+      display: block;
+      position: absolute;
+      z-index: 2000;
+      right: 1rem;
+      top: 2rem;
+      background: transparent;
+      background-image: url("/shared/icon-hamburger.svg");
+      background-repeat: no-repeat;
+      width: 1.5rem;
+      aspect-ratio: 1;
+      border: 0;
+    }
+
+    .mobile-nav-toggle.open-nav {
+      background-image: url("/shared/icon-close.svg");
+    }
+  }
+
   .primary-navigation a span {
     font-weight: 700;
     margin-right: 0.5em;
   }
 
   .underline-indicators > * {
-    padding: var(--underline-gap, 1rem) 0;
+    padding: var(--underline-gap, 2rem) 0;
     border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
   }
 
